--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18,26 +18,21 @@
     }
    ],
    "source": [
-    "import json\n",
     "import os\n",
     "import pickle as pkl\n",
     "import random\n",
-    "import statistics\n",
     "import time\n",
-    "import xgboost as xgb\n",
     "\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "import fasttext\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "from dotenv import load_dotenv\n",
     "from fastembed import TextEmbedding\n",
     "from sklearn import metrics\n",
-    "from sklearn.svm import SVC\n",
     "from tqdm import tqdm\n",
     "from xgboost import XGBClassifier\n",
-    "import fasttext\n",
     "\n",
     "from prompt_classifier.modeling.dspy_gpt import GPT4oMini\n",
     "from prompt_classifier.modeling.fasttext import FastTextClassifier\n",
@@ -253,9 +248,9 @@
     "\n",
     "# Create boxplot\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.boxplot(data=plot_data, x='Model', y='Latency (ms)', \n",
-    "            order=[x[0] for x in sorted(zip(times_ms.keys(), \n",
-    "                   [np.mean(v) for v in times_ms.values()]), \n",
+    "sns.boxplot(data=plot_data, x='Model', y='Latency (ms)',\n",
+    "            order=[x[0] for x in sorted(zip(times_ms.keys(),\n",
+    "                   [np.mean(v) for v in times_ms.values()], strict=False),\n",
     "                   key=lambda x: x[1])])\n",
     "\n",
     "plt.title('Model Latency Comparison')\n",
@@ -280,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
