--- a/notebooks/02_processing.ipynb
+++ b/notebooks/02_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\riso\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
      ]
     },
     {
@@ -52,13 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "general_df = pd.read_csv('data/interim/general_prompts.csv')\n",
     "finance_df = pd.read_csv('data/interim/finance_prompts.csv')\n",
     "healthcare_df = pd.read_csv('data/interim/healthcare_prompts.csv')\n",
     "law_df = pd.read_csv('data/interim/law_prompts.csv')\n",
     "\n",
     "\n",
-    "dataframes = {\"general_prompts\": general_df, \"finance_prompts\": finance_df,\n",
+    "dataframes = {\"finance_prompts\": finance_df,\n",
     "              \"healthcare_prompts\": healthcare_df, \"law_prompts\": law_df}"
    ]
   },
@@ -104,48 +104,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "general_df_cleaned = pd.read_csv('data/processed/general_prompts.csv')\n",
     "finance_df_cleaned = pd.read_csv('data/processed/finance_prompts.csv')\n",
     "healthcare_df_cleaned = pd.read_csv('data/processed/healthcare_prompts.csv')\n",
     "law_df_cleaned = pd.read_csv('data/processed/law_prompts.csv')\n",
     "\n",
-    "dataframes_cleaned = {\"general_prompts\": general_df_cleaned, \"finance_prompts\": finance_df_cleaned, \"healthcare_prompts\": healthcare_df_cleaned, \"law_prompts\": law_df_cleaned}"
+    "dataframes_cleaned = {\"finance_prompts\": finance_df_cleaned, \"healthcare_prompts\": healthcare_df_cleaned, \"law_prompts\": law_df_cleaned}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15000\n",
-      "15000\n",
-      "15000\n",
-      "15000\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(general_df_cleaned))\n",
-    "print(len(finance_df_cleaned))\n",
-    "print(len(healthcare_df_cleaned))\n",
-    "print(len(law_df_cleaned))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
