--- a/notebooks/04_results.ipynb
+++ b/notebooks/04_results.ipynb
@@ -164,7 +164,7 @@
     "                linewidth=1.5,\n",
     "                alpha=0.8,\n",
     "                zorder=10)\n",
-    "    \n",
+    "\n",
     "    # Add labels to each point with a styled annotation box\n",
     "    label_text = f\"{model}\"\n",
     "    bbox_props = {\n",
@@ -312,13 +312,6 @@
     "    spine.set_linewidth(0.8)\n",
     "    spine.set_color('#333333')\n",
     "\n",
-    "# Add a descriptive annotation\n",
-    "min_model = latency_by_model.idxmin()\n",
-    "max_model = latency_by_model.idxmax()\n",
-    "speedup = latency_by_model[max_model] / latency_by_model[min_model]\n",
-    "plt.figtext(0.5, 0.01, f\"Note: {min_model} is {speedup:.1f}x faster than {max_model}\",\n",
-    "            ha=\"center\", fontsize=10, style='italic')\n",
-    "\n",
     "# Add light shading for visual appeal\n",
     "plt.axhspan(latency_by_model.min()*0.95, latency_by_model.max()*1.1, alpha=0.05, color='blue')\n",
     "\n",
@@ -329,9 +322,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
