--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'seaborn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mxgboost\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mxgb\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msns\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pickle as pkl\n",
@@ -34,7 +22,7 @@
     "from tqdm import tqdm\n",
     "from xgboost import XGBClassifier\n",
     "\n",
-    "from prompt_classifier.modeling.dspy_gpt import GPT4oMini\n",
+    "from prompt_classifier.modeling.dspy_llm import LlmClassifier\n",
     "from prompt_classifier.modeling.fasttext import FastTextClassifier\n",
     "from prompt_classifier.modeling.nli_modernbert import ModernBERTNLI\n",
     "\n",
@@ -44,37 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splits = {'train': 'train_dataset.csv', 'validation': 'val_dataset.csv', 'test': 'test_dataset.csv'}\n",
+    "inference_df = pd.read_csv(\"hf://datasets/Arsive/toxicity_classification_jigsaw/\" + splits[\"validation\"])\n",
+    "inference_df = inference_df[(inference_df[\"toxic\"] == 1) | \n",
+    "                            (inference_df[\"severe_toxic\"] == 1) | \n",
+    "                            (inference_df[\"obscene\"] == 1) | \n",
+    "                            (inference_df[\"threat\"] == 1) | \n",
+    "                            (inference_df[\"insult\"] == 1) | \n",
+    "                            (inference_df[\"identity_hate\"] == 1)]\n",
+    "inference_df = inference_df.rename(columns={\"comment_text\": \"prompt\"})\n",
+    "inference_df[\"label\"] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;93m2025-03-16 18:44:20.101159776 [W:onnxruntime:, session_state.cc:1168 VerifyEachNodeIsAssignedToAnEp] Some nodes were not assigned to the preferred execution providers which may or may not have an negative impact on performance. e.g. ORT explicitly assigns shape related ops to CPU to improve perf.\u001b[m\n",
-      "\u001b[0;93m2025-03-16 18:44:20.101202116 [W:onnxruntime:, session_state.cc:1170 VerifyEachNodeIsAssignedToAnEp] Rerunning with verbose output on a non-minimal build will show node assignments.\u001b[m\n"
+      "\u001b[0;93m2025-03-28 20:31:13.813905722 [W:onnxruntime:, session_state.cc:1168 VerifyEachNodeIsAssignedToAnEp] Some nodes were not assigned to the preferred execution providers which may or may not have an negative impact on performance. e.g. ORT explicitly assigns shape related ops to CPU to improve perf.\u001b[m\n",
+      "\u001b[0;93m2025-03-28 20:31:13.813942844 [W:onnxruntime:, session_state.cc:1170 VerifyEachNodeIsAssignedToAnEp] Rerunning with verbose output on a non-minimal build will show node assignments.\u001b[m\n"
      ]
     }
    ],
    "source": [
-    "general_prompts = pd.read_csv(\"data/processed/general_prompts.csv\")\n",
-    "finance_prompts = pd.read_csv(\"data/processed/finance_prompts.csv\")\n",
-    "\n",
-    "finance_dataset = (\n",
-    "    pd.concat([finance_prompts, general_prompts])\n",
-    "    .sample(frac=1)\n",
-    "    .reset_index(drop=True)\n",
-    ")\n",
-    "\n",
-    "general_prompts_interim = pd.read_csv(\"data/interim/general_prompts.csv\")\n",
-    "finance_prompts_interim = pd.read_csv(\"data/interim/finance_prompts.csv\")\n",
-    "\n",
-    "finance_dataset_interim = (\n",
-    "    pd.concat([finance_prompts_interim, general_prompts_interim])\n",
-    "    .sample(frac=1)\n",
-    "    .reset_index(drop=True)\n",
-    ")\n",
-    "\n",
     "baai_embedding = TextEmbedding(\n",
     "    model_name=\"BAAI/bge-small-en-v1.5\",\n",
     "    providers=[\"CUDAExecutionProvider\"]\n",
@@ -87,32 +75,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split data\n",
-    "train_data = finance_dataset_interim.sample(n=800)\n",
-    "test_data = finance_dataset_interim.drop(train_data.index).sample(n=4000)\n",
-    "\n",
     "# GPT Classifier\n",
-    "gpt_classifier = GPT4oMini(\n",
+    "llm_classifier = LlmClassifier(\n",
     "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
     "    proxy_url=os.getenv(\"PROXY_URL\"),\n",
     "    model_name=\"gpt-4o-mini\",\n",
     "    domain=\"finance\",\n",
-    "    train_data=train_data,\n",
-    "    test_data=test_data,\n",
+    "    train_data=inference_df,\n",
+    "    test_data=inference_df,\n",
     ")\n",
     "\n",
     "try:\n",
-    "    gpt_classifier.load_model(\"models/gpt-4o-mini-finance.json\")\n",
+    "    llm_classifier.load_model(\"models/gpt-4o-mini-finance.json\")\n",
     "\n",
-    "    test_predictions, test_actuals, test_latency = gpt_classifier.predict()\n",
+    "    test_predictions, test_actuals, test_latency = llm_classifier.predict()\n",
     "    print(f\"Test Accuracy: {metrics.accuracy_score(test_actuals, test_predictions)}\")\n",
     "\n",
     "except Exception as e:\n",
-    "    print(f\"Error running GPT model: {e}\")\n",
-    "\n",
-    "\n",
+    "    print(f\"Error running GPT model: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error running ModernBERT model: Failed to import transformers.models.modernbert.modeling_modernbert because of the following error (look up to see its traceback):\n",
+      "partially initialized module 'torch._dynamo' has no attribute 'external_utils' (most likely due to a circular import)\n"
+     ]
+    }
+   ],
+   "source": [
     "try:\n",
-    "    test_data = finance_dataset_interim.sample(n=30_000)\n",
     "    # ModernBERT Classifier\n",
     "    bert_classifier = ModernBERTNLI(domain=\"finance\")\n",
     "    bert_classifier.classifier.model.to(\"cuda\")\n",
@@ -120,13 +118,13 @@
     "    # Test predictions\n",
     "    test_predictions = []\n",
     "    test_times = []\n",
-    "    for _, row in tqdm(test_data.iterrows(), total=len(test_data)):\n",
+    "    for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
     "        start_time = time.perf_counter_ns()\n",
     "        pred = bert_classifier.predict(row[\"prompt\"])\n",
     "        test_predictions.append(pred)\n",
     "        test_times.append(time.perf_counter_ns() - start_time)\n",
     "\n",
-    "    test_acc = metrics.accuracy_score(test_data[\"label\"], test_predictions)\n",
+    "    test_acc = metrics.accuracy_score(inference_df[\"label\"], test_predictions)\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error running ModernBERT model: {e}\")"
@@ -134,17 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data = finance_dataset.sample(frac=0.7).reset_index(drop=True)\n",
-    "test_data = finance_dataset.drop(train_data.index).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +140,7 @@
      "output_type": "stream",
      "text": [
       "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n",
-      "100%|██████████| 9000/9000 [00:00<00:00, 18818.39it/s]\n"
+      "100%|██████████| 3214/3214 [00:00<00:00, 6290.89it/s]\n"
      ]
     }
    ],
@@ -162,10 +150,10 @@
     "prediction_times_ft = []\n",
     "\n",
     "# fastText\n",
-    "fasttext_classifier = FastTextClassifier(train_data=train_data, test_data=test_data)\n",
+    "fasttext_classifier = FastTextClassifier(train_data=inference_df, test_data=inference_df)\n",
     "fasttext_classifier.model = fasttext.load_model(\"models/fastText_finance_fasttext.bin\")\n",
     "\n",
-    "for _, row in tqdm(test_data.iterrows(), total=len(test_data)):\n",
+    "for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
     "    text = str(row[\"prompt\"])\n",
     "    query = text.replace(\"\\n\", \"\")\n",
     "\n",
@@ -185,18 +173,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Embedding test data\n",
     "start_time = time.perf_counter_ns()\n",
-    "test_embeds = np.array(list(baai_embedding.embed(test_data[\"prompt\"])))\n",
+    "test_embeds = np.array(list(baai_embedding.embed(inference_df[\"prompt\"])))\n",
     "end_time = time.perf_counter_ns()\n",
     "embed_times = end_time - start_time\n",
     "\n",
-    "mean_embed_time = embed_times / len(train_data + test_data)\n",
+    "mean_embed_time = embed_times / len(inference_df)\n",
     "\n",
     "with open(\"models/SVM_finance_baai.pkl\", \"rb\") as svm_file:\n",
     "    svm_classifier = pkl.load(svm_file)\n",
@@ -230,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,25 +232,34 @@
     "plot_data = pd.DataFrame({\n",
     "    'Model': [k for k,v in times_ms.items() for _ in v],\n",
     "    'Latency (ms)': [x for v in times_ms.values() for x in v]\n",
-    "})\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fastText Accuracy: 0.7078406969508401\n",
+      "SVM Accuracy: 0.9499066583696328\n",
+      "XGBoost Accuracy: 0.924082140634723\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate accuracy for each model\n",
+    "accuracy_ft = metrics.accuracy_score(actuals_ft, predictions_ft)\n",
+    "accuracy_svm = metrics.accuracy_score(actuals_ft, predictions_svm)\n",
+    "accuracy_xgb = metrics.accuracy_score(actuals_ft, predictions_xgb)\n",
     "\n",
-    "# Create boxplot\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.boxplot(data=plot_data, x='Model', y='Latency (ms)',\n",
-    "            order=[x[0] for x in sorted(zip(times_ms.keys(),\n",
-    "                   [np.mean(v) for v in times_ms.values()], strict=False),\n",
-    "                   key=lambda x: x[1])])\n",
-    "\n",
-    "plt.title('Model Latency Comparison')\n",
-    "plt.yscale('log')\n",
-    "plt.grid(True, alpha=0.3)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "# Print average latencies\n",
-    "for model, times in times_ms.items():\n",
-    "    print(f\"{model} average latency: {times.mean():.2f} ms\")"
+    "# Print the accuracies\n",
+    "print(f\"fastText Accuracy: {accuracy_ft}\")\n",
+    "print(f\"SVM Accuracy: {accuracy_svm}\")\n",
+    "print(f\"XGBoost Accuracy: {accuracy_xgb}\")"
    ]
   },
   {
@@ -275,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-validation",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
