--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,20 +32,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "splits = {'train': 'train_dataset.csv', 'validation': 'val_dataset.csv', 'test': 'test_dataset.csv'}\n",
-    "inference_df = pd.read_csv(\"hf://datasets/Arsive/toxicity_classification_jigsaw/\" + splits[\"validation\"])\n",
+    "jigsaw_splits = {'train': 'train_dataset.csv', 'validation': 'val_dataset.csv', 'test': 'test_dataset.csv'}\n",
+    "inference_df = pd.read_csv(\"hf://datasets/Arsive/toxicity_classification_jigsaw/\" + jigsaw_splits[\"validation\"])\n",
+    "\n",
+    "olid_splits = {'train': 'train.csv', 'test': 'test.csv'}\n",
+    "olid_df = pd.read_csv(\"hf://datasets/christophsonntag/OLID/\" + olid_splits[\"train\"])\n",
+    "\n",
     "inference_df = inference_df[(inference_df[\"toxic\"] == 1) | \n",
     "                            (inference_df[\"severe_toxic\"] == 1) | \n",
     "                            (inference_df[\"obscene\"] == 1) | \n",
     "                            (inference_df[\"threat\"] == 1) | \n",
     "                            (inference_df[\"insult\"] == 1) | \n",
     "                            (inference_df[\"identity_hate\"] == 1)]\n",
+    "\n",
+    "olid_df = olid_df.rename(columns={\"cleaned_tweet\": \"prompt\"})\n",
+    "olid_df[\"label\"] = 0\n",
+    "\n",
     "inference_df = inference_df.rename(columns={\"comment_text\": \"prompt\"})\n",
-    "inference_df[\"label\"] = 0"
+    "inference_df[\"label\"] = 0\n",
+    "\n",
+    "inference_df = pd.concat([inference_df, olid_df], ignore_index=True)\n",
+    "inference_df = inference_df.sample(frac=1).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_df = inference_df[[\"prompt\", \"label\"]]\n",
+    "inference_df = inference_df.dropna(subset=['prompt'])"
    ]
   },
   {
@@ -57,8 +78,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;93m2025-03-28 20:31:13.813905722 [W:onnxruntime:, session_state.cc:1168 VerifyEachNodeIsAssignedToAnEp] Some nodes were not assigned to the preferred execution providers which may or may not have an negative impact on performance. e.g. ORT explicitly assigns shape related ops to CPU to improve perf.\u001b[m\n",
-      "\u001b[0;93m2025-03-28 20:31:13.813942844 [W:onnxruntime:, session_state.cc:1170 VerifyEachNodeIsAssignedToAnEp] Rerunning with verbose output on a non-minimal build will show node assignments.\u001b[m\n"
+      "\u001b[0;93m2025-03-31 14:26:10.285378521 [W:onnxruntime:, session_state.cc:1168 VerifyEachNodeIsAssignedToAnEp] Some nodes were not assigned to the preferred execution providers which may or may not have an negative impact on performance. e.g. ORT explicitly assigns shape related ops to CPU to improve perf.\u001b[m\n",
+      "\u001b[0;93m2025-03-31 14:26:10.285426626 [W:onnxruntime:, session_state.cc:1170 VerifyEachNodeIsAssignedToAnEp] Rerunning with verbose output on a non-minimal build will show node assignments.\u001b[m\n"
      ]
     }
    ],
@@ -78,9 +99,9 @@
     "# GPT Classifier\n",
     "llm_classifier = LlmClassifier(\n",
     "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
-    "    proxy_url=os.getenv(\"PROXY_URL\"),\n",
+    "    api_base=os.getenv(\"PROXY_URL\"),\n",
     "    model_name=\"gpt-4o-mini\",\n",
-    "    domain=\"finance\",\n",
+    "    domain=\"finance or healthcare or law\",\n",
     "    train_data=inference_df,\n",
     "    test_data=inference_df,\n",
     ")\n",
@@ -89,10 +110,47 @@
     "    llm_classifier.load_model(\"models/gpt-4o-mini-finance.json\")\n",
     "\n",
     "    test_predictions, test_actuals, test_latency = llm_classifier.predict()\n",
-    "    print(f\"Test Accuracy: {metrics.accuracy_score(test_actuals, test_predictions)}\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error running GPT model: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_classifier_finance = ModernBERTNLI(domain=\"finance\")\n",
+    "bert_classifier_healthcare = ModernBERTNLI(domain=\"healthcare\") \n",
+    "bert_classifier_law = ModernBERTNLI(domain=\"law\")\n",
+    "\n",
+    "predictions_bert = []\n",
+    "prediction_times_bert = []\n",
+    "\n",
+    "try:\n",
+    "    # Move models to GPU\n",
+    "    bert_classifier_finance.classifier.model.to(\"cuda\")\n",
+    "    bert_classifier_healthcare.classifier.model.to(\"cuda\")\n",
+    "    bert_classifier_law.classifier.model.to(\"cuda\")\n",
+    "\n",
+    "    # Get predictions for each prompt\n",
+    "    for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
+    "        start_time = time.perf_counter_ns()\n",
+    "        \n",
+    "        # Get predictions from all models\n",
+    "        pred_finance = bert_classifier_finance.predict(row[\"prompt\"])\n",
+    "        pred_healthcare = bert_classifier_healthcare.predict(row[\"prompt\"])\n",
+    "        pred_law = bert_classifier_law.predict(row[\"prompt\"])\n",
+    "        \n",
+    "        end_time = time.perf_counter_ns()\n",
+    "        prediction_times_bert.append(end_time - start_time)\n",
+    "        \n",
+    "        # If any model predicts 1, final prediction is 0\n",
+    "        predictions_bert.append(0 if (pred_finance == 1 or pred_healthcare == 1 or pred_law == 1) else 1)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error running ModernBERT models: {e}\")"
    ]
   },
   {
@@ -101,46 +159,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error running ModernBERT model: Failed to import transformers.models.modernbert.modeling_modernbert because of the following error (look up to see its traceback):\n",
-      "partially initialized module 'torch._dynamo' has no attribute 'external_utils' (most likely due to a circular import)\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    # ModernBERT Classifier\n",
-    "    bert_classifier = ModernBERTNLI(domain=\"finance\")\n",
-    "    bert_classifier.classifier.model.to(\"cuda\")\n",
-    "\n",
-    "    # Test predictions\n",
-    "    test_predictions = []\n",
-    "    test_times = []\n",
-    "    for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
-    "        start_time = time.perf_counter_ns()\n",
-    "        pred = bert_classifier.predict(row[\"prompt\"])\n",
-    "        test_predictions.append(pred)\n",
-    "        test_times.append(time.perf_counter_ns() - start_time)\n",
-    "\n",
-    "    test_acc = metrics.accuracy_score(inference_df[\"label\"], test_predictions)\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f\"Error running ModernBERT model: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n",
-      "100%|██████████| 3214/3214 [00:00<00:00, 6290.89it/s]\n"
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n",
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n",
+      "100%|██████████| 16384/16384 [00:01<00:00, 12847.39it/s]\n"
      ]
     }
    ],
@@ -150,34 +175,40 @@
     "prediction_times_ft = []\n",
     "\n",
     "# fastText\n",
-    "fasttext_classifier = FastTextClassifier(train_data=inference_df, test_data=inference_df)\n",
-    "fasttext_classifier.model = fasttext.load_model(\"models/fastText_finance_fasttext.bin\")\n",
+    "fasttext_classifier_finance = FastTextClassifier(train_data=inference_df, test_data=inference_df)\n",
+    "fasttext_classifier_finance.model = fasttext.load_model(\"models/fastText_finance_fasttext.bin\")\n",
+    "\n",
+    "fasttext_classifier_healthcare = FastTextClassifier(train_data=inference_df, test_data=inference_df)\n",
+    "fasttext_classifier_healthcare.model = fasttext.load_model(\"models/fastText_healthcare_fasttext.bin\")\n",
+    "\n",
+    "fasttext_classifier_law = FastTextClassifier(train_data=inference_df, test_data=inference_df)\n",
+    "fasttext_classifier_law.model = fasttext.load_model(\"models/fastText_law_fasttext.bin\")\n",
     "\n",
     "for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
     "    text = str(row[\"prompt\"])\n",
     "    query = text.replace(\"\\n\", \"\")\n",
     "\n",
     "    start_time = time.perf_counter_ns()\n",
-    "    prediction = fasttext_classifier.model.predict(query)\n",
+    "    \n",
+    "    # Predictions from all three classifiers\n",
+    "    prediction_finance = fasttext_classifier_finance.model.predict(query)\n",
+    "    prediction_healthcare = fasttext_classifier_healthcare.model.predict(query)\n",
+    "    prediction_law = fasttext_classifier_law.model.predict(query)\n",
+    "    \n",
     "    end_time = time.perf_counter_ns()\n",
-    "\n",
     "    prediction_times_ft.append(end_time - start_time)\n",
-    "\n",
-    "    if prediction[0][0] == \"__label__1\":\n",
-    "        predictions_ft.append(1)\n",
-    "    else:\n",
-    "        predictions_ft.append(0)\n",
+    "    \n",
+    "    predictions_ft.append(0 if (prediction_finance[0][0] == \"__label__1\" or prediction_healthcare[0][0] == \"__label__1\" or prediction_law[0][0] == \"__label__1\") else 1)\n",
     "\n",
     "    actuals_ft.append(row[\"label\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Embedding test data\n",
     "start_time = time.perf_counter_ns()\n",
     "test_embeds = np.array(list(baai_embedding.embed(inference_df[\"prompt\"])))\n",
@@ -187,10 +218,21 @@
     "mean_embed_time = embed_times / len(inference_df)\n",
     "\n",
     "with open(\"models/SVM_finance_baai.pkl\", \"rb\") as svm_file:\n",
-    "    svm_classifier = pkl.load(svm_file)\n",
+    "    svm_classifier_finance = pkl.load(svm_file)\n",
     "\n",
-    "xgb_classifier = XGBClassifier()\n",
-    "xgb_classifier.load_model(\"models/XGBoost_finance_baai.json\")\n",
+    "with open(\"models/SVM_healthcare_baai.pkl\", \"rb\") as svm_file:\n",
+    "    svm_classifier_healthcare = pkl.load(svm_file)\n",
+    "\n",
+    "with open(\"models/SVM_law_baai.pkl\", \"rb\") as svm_file:\n",
+    "    svm_classifier_law = pkl.load(svm_file)\n",
+    "\n",
+    "xgb_classifier_finance = XGBClassifier()\n",
+    "xgb_classifier_healthcare = XGBClassifier()\n",
+    "xgb_classifier_law = XGBClassifier()\n",
+    "\n",
+    "xgb_classifier_finance.load_model(\"models/XGBoost_finance_baai.json\")\n",
+    "xgb_classifier_healthcare.load_model(\"models/XGBoost_healthcare_baai.json\")\n",
+    "xgb_classifier_law.load_model(\"models/XGBoost_law_baai.json\")\n",
     "\n",
     "predictions_xgb = []\n",
     "predictions_svm = []\n",
@@ -198,34 +240,40 @@
     "prediction_times_xgb = []\n",
     "prediction_times_svm = []\n",
     "\n",
-    "for _, test_embed in enumerate(test_embeds):\n",
+    "for test_embed in test_embeds:\n",
+    "    # SVM predictions\n",
     "    start_time = time.perf_counter_ns()\n",
-    "    prediction = svm_classifier.predict(test_embed.reshape(1, -1))\n",
+    "    pred_finance = svm_classifier_finance.predict(test_embed.reshape(1, -1))\n",
+    "    pred_healthcare = svm_classifier_healthcare.predict(test_embed.reshape(1, -1))\n",
+    "    pred_law = svm_classifier_law.predict(test_embed.reshape(1, -1))\n",
     "    end_time = time.perf_counter_ns()\n",
-    "\n",
+    "    \n",
     "    prediction_times_svm.append(end_time - start_time)\n",
-    "    predictions_svm.append(prediction[0])\n",
+    "    # If any model predicts 1, final prediction is 0\n",
+    "    predictions_svm.append(0 if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1) else 1)\n",
     "\n",
-    "\n",
-    "for _, test_embed in enumerate(test_embeds):\n",
+    "    # XGBoost predictions\n",
     "    start_time = time.perf_counter_ns()\n",
-    "    prediction = xgb_classifier.predict(test_embed.reshape(1, -1))\n",
+    "    pred_finance = xgb_classifier_finance.predict(test_embed.reshape(1, -1))\n",
+    "    pred_healthcare = xgb_classifier_healthcare.predict(test_embed.reshape(1, -1))\n",
+    "    pred_law = xgb_classifier_law.predict(test_embed.reshape(1, -1))\n",
     "    end_time = time.perf_counter_ns()\n",
-    "\n",
+    "    \n",
     "    prediction_times_xgb.append(end_time - start_time)\n",
-    "    predictions_xgb.append(prediction[0])"
+    "    # If any model predicts 1, final prediction is 0\n",
+    "    predictions_xgb.append(0 if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1) else 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "times_ms = {\n",
     "    'fastText': np.array(prediction_times_ft) / 1_000_000,\n",
     "    'XGBoost': np.array(prediction_times_xgb) / 1_000_000,\n",
-    "    'SVM': np.array(prediction_times_svm) / 1_000_000\n",
+    "    'SVM': np.array(prediction_times_svm) / 1_000_000,\n",
     "}\n",
     "\n",
     "# Create DataFrame for plotting\n",
@@ -237,21 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fastText Accuracy: 0.7078406969508401\n",
-      "SVM Accuracy: 0.9499066583696328\n",
-      "XGBoost Accuracy: 0.924082140634723\n"
+      "fastText Accuracy: 0.15362548828125\n",
+      "SVM Accuracy: 0.778564453125\n",
+      "XGBoost Accuracy: 0.725341796875\n"
      ]
     }
    ],
    "source": [
-    "# Calculate accuracy for each model\n",
     "accuracy_ft = metrics.accuracy_score(actuals_ft, predictions_ft)\n",
     "accuracy_svm = metrics.accuracy_score(actuals_ft, predictions_svm)\n",
     "accuracy_xgb = metrics.accuracy_score(actuals_ft, predictions_xgb)\n",
@@ -275,18 +322,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
   }
  },
  "nbformat": 4,
