--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,18 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;93m2025-03-31 14:26:10.285378521 [W:onnxruntime:, session_state.cc:1168 VerifyEachNodeIsAssignedToAnEp] Some nodes were not assigned to the preferred execution providers which may or may not have an negative impact on performance. e.g. ORT explicitly assigns shape related ops to CPU to improve perf.\u001b[m\n",
-      "\u001b[0;93m2025-03-31 14:26:10.285426626 [W:onnxruntime:, session_state.cc:1170 VerifyEachNodeIsAssignedToAnEp] Rerunning with verbose output on a non-minimal build will show node assignments.\u001b[m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "baai_embedding = TextEmbedding(\n",
     "    model_name=\"BAAI/bge-small-en-v1.5\",\n",
@@ -97,19 +88,58 @@
    "outputs": [],
    "source": [
     "# GPT Classifier\n",
-    "llm_classifier = LlmClassifier(\n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
-    "    api_base=os.getenv(\"PROXY_URL\"),\n",
-    "    model_name=\"gpt-4o-mini\",\n",
-    "    domain=\"finance or healthcare or law\",\n",
-    "    train_data=inference_df,\n",
-    "    test_data=inference_df,\n",
-    ")\n",
-    "\n",
     "try:\n",
-    "    llm_classifier.load_model(\"models/gpt-4o-mini-finance.json\")\n",
+    "    llm_classifier_finance = LlmClassifier(\n",
+    "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "        api_base=os.getenv(\"PROXY_URL\"),\n",
+    "        model_name=\"gpt-4o-mini\",\n",
+    "        domain=\"finance\",\n",
+    "        train_data=inference_df,\n",
+    "        test_data=inference_df,\n",
+    "    )\n",
     "\n",
-    "    test_predictions, test_actuals, test_latency = llm_classifier.predict()\n",
+    "    llm_classifier_healthcare = LlmClassifier(\n",
+    "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "        api_base=os.getenv(\"PROXY_URL\"),\n",
+    "        model_name=\"gpt-4o-mini\",\n",
+    "        domain=\"healthcare\",\n",
+    "        train_data=inference_df,\n",
+    "        test_data=inference_df,\n",
+    "    )\n",
+    "\n",
+    "    llm_classifier_law = LlmClassifier(\n",
+    "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "        api_base=os.getenv(\"PROXY_URL\"),\n",
+    "        model_name=\"gpt-4o-mini\",\n",
+    "        domain=\"law\",\n",
+    "        train_data=inference_df,\n",
+    "        test_data=inference_df,\n",
+    "    )\n",
+    "\n",
+    "    # Load models\n",
+    "    llm_classifier_finance.load_model(\"models/gpt-4o-mini-finance.json\")\n",
+    "    llm_classifier_healthcare.load_model(\"models/gpt-4o-mini-healthcare.json\")\n",
+    "    llm_classifier_law.load_model(\"models/gpt-4o-mini-law.json\")\n",
+    "\n",
+    "    predictions_llm = []\n",
+    "    prediction_times_llm = []\n",
+    "    actuals_llm = []\n",
+    "\n",
+    "    # Get predictions for each prompt\n",
+    "    for _, row in tqdm(inference_df.head(1000).iterrows(), total=1000):\n",
+    "        start_time = time.perf_counter_ns()\n",
+    "        \n",
+    "        # Get predictions from all models\n",
+    "        pred_finance = llm_classifier_finance.predict_single(row[\"prompt\"])\n",
+    "        pred_healthcare = llm_classifier_healthcare.predict_single(row[\"prompt\"])\n",
+    "        pred_law = llm_classifier_law.predict_single(row[\"prompt\"])\n",
+    "        \n",
+    "        end_time = time.perf_counter_ns()\n",
+    "        prediction_times_llm.append(end_time - start_time)\n",
+    "        \n",
+    "        # If any model predicts 1, final prediction is 0\n",
+    "        predictions_llm.append(0 if (pred_finance == 1 or pred_healthcare == 1 or pred_law == 1) else 1)\n",
+    "        actuals_llm.append(row[\"label\"])\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error running GPT model: {e}\")"
@@ -155,20 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n",
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n",
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n",
-      "100%|██████████| 16384/16384 [00:01<00:00, 12847.39it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "actuals_ft = []\n",
     "predictions_ft = []\n",
@@ -205,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,28 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fastText Accuracy: 0.15362548828125\n",
-      "SVM Accuracy: 0.778564453125\n",
-      "XGBoost Accuracy: 0.725341796875\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy_ft = metrics.accuracy_score(actuals_ft, predictions_ft)\n",
     "accuracy_svm = metrics.accuracy_score(actuals_ft, predictions_svm)\n",
     "accuracy_xgb = metrics.accuracy_score(actuals_ft, predictions_xgb)\n",
+    "accuracy_llm = metrics.accuracy_score(actuals_llm, predictions_llm)\n",
     "\n",
     "# Print the accuracies\n",
     "print(f\"fastText Accuracy: {accuracy_ft}\")\n",
     "print(f\"SVM Accuracy: {accuracy_svm}\")\n",
-    "print(f\"XGBoost Accuracy: {accuracy_xgb}\")"
+    "print(f\"XGBoost Accuracy: {accuracy_xgb}\")\n",
+    "print(f\"LLM Accuracy: {accuracy_llm}\")"
    ]
   },
   {
@@ -322,6 +333,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
