--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -12,18 +12,20 @@
     "import time\n",
     "\n",
     "import fasttext\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "import torch\n",
     "from dotenv import load_dotenv\n",
     "from fastembed import TextEmbedding\n",
     "from sklearn import metrics\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
     "from tqdm import tqdm\n",
     "from xgboost import XGBClassifier\n",
     "\n",
+    "os.chdir(\"..\")\n",
     "from prompt_classifier.modeling.dspy_llm import LlmClassifier\n",
     "from prompt_classifier.modeling.fasttext import FastTextClassifier\n",
+    "from prompt_classifier.modeling.mlp import MLP, evaluate, train\n",
     "from prompt_classifier.modeling.nli_modernbert import ModernBERTNLI\n",
     "\n",
     "load_dotenv()\n",
@@ -42,11 +44,11 @@
     "olid_splits = {'train': 'train.csv', 'test': 'test.csv'}\n",
     "olid_df = pd.read_csv(\"hf://datasets/christophsonntag/OLID/\" + olid_splits[\"train\"])\n",
     "\n",
-    "inference_df = inference_df[(inference_df[\"toxic\"] == 1) | \n",
-    "                            (inference_df[\"severe_toxic\"] == 1) | \n",
-    "                            (inference_df[\"obscene\"] == 1) | \n",
-    "                            (inference_df[\"threat\"] == 1) | \n",
-    "                            (inference_df[\"insult\"] == 1) | \n",
+    "inference_df = inference_df[(inference_df[\"toxic\"] == 1) |\n",
+    "                            (inference_df[\"severe_toxic\"] == 1) |\n",
+    "                            (inference_df[\"obscene\"] == 1) |\n",
+    "                            (inference_df[\"threat\"] == 1) |\n",
+    "                            (inference_df[\"insult\"] == 1) |\n",
     "                            (inference_df[\"identity_hate\"] == 1)]\n",
     "\n",
     "olid_df = olid_df.rename(columns={\"cleaned_tweet\": \"prompt\"})\n",
@@ -128,15 +130,15 @@
     "    # Get predictions for each prompt\n",
     "    for _, row in tqdm(inference_df.head(1000).iterrows(), total=1000):\n",
     "        start_time = time.perf_counter_ns()\n",
-    "        \n",
+    "\n",
     "        # Get predictions from all models\n",
     "        pred_finance = llm_classifier_finance.predict_single(row[\"prompt\"])\n",
     "        pred_healthcare = llm_classifier_healthcare.predict_single(row[\"prompt\"])\n",
     "        pred_law = llm_classifier_law.predict_single(row[\"prompt\"])\n",
-    "        \n",
+    "\n",
     "        end_time = time.perf_counter_ns()\n",
     "        prediction_times_llm.append(end_time - start_time)\n",
-    "        \n",
+    "\n",
     "        # If any model predicts 1, final prediction is 0\n",
     "        predictions_llm.append(0 if (pred_finance == 1 or pred_healthcare == 1 or pred_law == 1) else 1)\n",
     "        actuals_llm.append(row[\"label\"])\n",
@@ -152,7 +154,7 @@
    "outputs": [],
    "source": [
     "bert_classifier_finance = ModernBERTNLI(domain=\"finance\")\n",
-    "bert_classifier_healthcare = ModernBERTNLI(domain=\"healthcare\") \n",
+    "bert_classifier_healthcare = ModernBERTNLI(domain=\"healthcare\")\n",
     "bert_classifier_law = ModernBERTNLI(domain=\"law\")\n",
     "\n",
     "predictions_bert = []\n",
@@ -167,15 +169,15 @@
     "    # Get predictions for each prompt\n",
     "    for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
     "        start_time = time.perf_counter_ns()\n",
-    "        \n",
+    "\n",
     "        # Get predictions from all models\n",
     "        pred_finance = bert_classifier_finance.predict(row[\"prompt\"])\n",
     "        pred_healthcare = bert_classifier_healthcare.predict(row[\"prompt\"])\n",
     "        pred_law = bert_classifier_law.predict(row[\"prompt\"])\n",
-    "        \n",
+    "\n",
     "        end_time = time.perf_counter_ns()\n",
     "        prediction_times_bert.append(end_time - start_time)\n",
-    "        \n",
+    "\n",
     "        # If any model predicts 1, final prediction is 0\n",
     "        predictions_bert.append(0 if (pred_finance == 1 or pred_healthcare == 1 or pred_law == 1) else 1)\n",
     "\n",
@@ -208,15 +210,15 @@
     "    query = text.replace(\"\\n\", \"\")\n",
     "\n",
     "    start_time = time.perf_counter_ns()\n",
-    "    \n",
+    "\n",
     "    # Predictions from all three classifiers\n",
     "    prediction_finance = fasttext_classifier_finance.model.predict(query)\n",
     "    prediction_healthcare = fasttext_classifier_healthcare.model.predict(query)\n",
     "    prediction_law = fasttext_classifier_law.model.predict(query)\n",
-    "    \n",
+    "\n",
     "    end_time = time.perf_counter_ns()\n",
     "    prediction_times_ft.append(end_time - start_time)\n",
-    "    \n",
+    "\n",
     "    predictions_ft.append(0 if (prediction_finance[0][0] == \"__label__1\" or prediction_healthcare[0][0] == \"__label__1\" or prediction_law[0][0] == \"__label__1\") else 1)\n",
     "\n",
     "    actuals_ft.append(row[\"label\"])"
@@ -266,7 +268,7 @@
     "    pred_healthcare = svm_classifier_healthcare.predict(test_embed.reshape(1, -1))\n",
     "    pred_law = svm_classifier_law.predict(test_embed.reshape(1, -1))\n",
     "    end_time = time.perf_counter_ns()\n",
-    "    \n",
+    "\n",
     "    prediction_times_svm.append(end_time - start_time)\n",
     "    # If any model predicts 1, final prediction is 0\n",
     "    predictions_svm.append(0 if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1) else 1)\n",
@@ -277,7 +279,7 @@
     "    pred_healthcare = xgb_classifier_healthcare.predict(test_embed.reshape(1, -1))\n",
     "    pred_law = xgb_classifier_law.predict(test_embed.reshape(1, -1))\n",
     "    end_time = time.perf_counter_ns()\n",
-    "    \n",
+    "\n",
     "    prediction_times_xgb.append(end_time - start_time)\n",
     "    # If any model predicts 1, final prediction is 0\n",
     "    predictions_xgb.append(0 if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1) else 1)"
@@ -326,11 +328,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
