refactor: add return type hints and update inference data handling

--- a/notebooks/06_mlp.ipynb
+++ b/notebooks/06_mlp.ipynb
@@ -244,7 +244,7 @@
    "outputs": [],
    "source": [
     "class DyT(nn.Module):\n",
-    "    def __init__(self, hidden_size: int, init_alpha: float = 0.5):\n",
+    "    def __init__(self, hidden_size: int, init_alpha: float = 0.5) -> None:\n",
     "        super().__init__()\n",
     "        self.alpha = nn.Parameter(torch.ones(1) * init_alpha)\n",
     "        self.gamma = nn.Parameter(torch.ones(hidden_size))\n",
@@ -261,7 +261,7 @@
    "outputs": [],
    "source": [
     "class Head(nn.Module):\n",
-    "    def __init__(self, hidden_size: int, num_classes: int):\n",
+    "    def __init__(self, hidden_size: int, num_classes: int) -> None:\n",
     "        super().__init__()\n",
     "        self.seq = nn.Sequential(\n",
     "            nn.Linear(hidden_size, 128),\n",
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_frozen():\n",
+    "def train_frozen() -> None:\n",
     "    model.eval()\n",
     "    for param in model.parameters():\n",
     "        param.requires_grad = False\n",
@@ -386,14 +386,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_accuracy():\n",
+    "jigsaw_splits = {'train': 'train_dataset.csv', 'validation': 'val_dataset.csv', 'test': 'test_dataset.csv'}\n",
+    "inference_df = pd.read_csv(\"hf://datasets/Arsive/toxicity_classification_jigsaw/\" + jigsaw_splits[\"validation\"])\n",
+    "\n",
+    "olid_splits = {'train': 'train.csv', 'test': 'test.csv'}\n",
+    "olid_df = pd.read_csv(\"hf://datasets/christophsonntag/OLID/\" + olid_splits[\"train\"])\n",
+    "\n",
+    "inference_df = inference_df[(inference_df[\"toxic\"] == 1) |\n",
+    "                            (inference_df[\"severe_toxic\"] == 1) |\n",
+    "                            (inference_df[\"obscene\"] == 1) |\n",
+    "                            (inference_df[\"threat\"] == 1) |\n",
+    "                            (inference_df[\"insult\"] == 1) |\n",
+    "                            (inference_df[\"identity_hate\"] == 1)]\n",
+    "\n",
+    "olid_df = olid_df.rename(columns={\"cleaned_tweet\": \"prompt\"})\n",
+    "olid_df[\"label\"] = 0\n",
+    "\n",
+    "inference_df = inference_df.rename(columns={\"comment_text\": \"prompt\"})\n",
+    "inference_df[\"label\"] = 0\n",
+    "\n",
+    "inference_df = pd.concat([inference_df, olid_df], ignore_index=True)\n",
+    "inference_df = inference_df.sample(frac=1).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_dataset = Dataset.from_pandas(inference_df)\n",
+    "inference_dataloader = DataLoader(\n",
+    "    inference_dataset, batch_size=BATCH_SIZE, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_accuracy() -> float:\n",
     "    model.eval()  # Set model to evaluation mode\n",
     "\n",
     "    correct = 0\n",
     "    total = 0\n",
     "\n",
     "    with torch.inference_mode():\n",
-    "        for batch in tqdm(test_dataloader, desc=\"Evaluating\"):\n",
+    "        for batch in tqdm(inference_dataloader, desc=\"Evaluating\"):\n",
     "            input_msg = batch[\"messages\"]\n",
     "            input = tokenizer_func(input_msg).to(model.device)\n",
     "            target = batch[\"label\"].to(model.device)\n",
