mlp and inference updates for final results

--- a/notebooks/06_mlp.ipynb
+++ b/notebooks/06_mlp.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "from functools import partial\n",
     "\n",
+    "import random\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -16,11 +17,13 @@
     "import torch.nn.functional as F\n",
     "from accelerate.data_loader import DataLoader\n",
     "from datasets import ClassLabel, Dataset, load_dataset\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_recall_fscore_support\n",
     "from torch import nn as nn\n",
     "from torch.optim import AdamW\n",
     "from tqdm import tqdm\n",
-    "from transformers import AutoModel, AutoTokenizer"
+    "from transformers import AutoModel, AutoTokenizer\n",
+    "\n",
+    "random.seed(1)"
    ]
   },
   {
@@ -96,33 +99,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finance_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "health_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "law_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Add labels\n",
     "finance_df[\"label\"] = 0\n",
     "health_df[\"label\"] = 1\n",
@@ -145,15 +121,6 @@
    "outputs": [],
    "source": [
     "combined_df = combined_df.sample(frac=1, random_state=42).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_df.head()"
    ]
   },
   {
@@ -330,7 +297,7 @@
     "    last_test_loss = float(\"inf\")\n",
     "    patience_counter = 0\n",
     "\n",
-    "    while True:\n",
+    "    for epoch in range(3):\n",
     "        for batch in tqdm(train_dataloader):\n",
     "            optim_frozen.zero_grad()\n",
     "            input_msg = batch[\"messages\"]\n",
@@ -386,27 +353,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load Jigsaw dataset\n",
     "jigsaw_splits = {'train': 'train_dataset.csv', 'validation': 'val_dataset.csv', 'test': 'test_dataset.csv'}\n",
-    "inference_df = pd.read_csv(\"hf://datasets/Arsive/toxicity_classification_jigsaw/\" + jigsaw_splits[\"validation\"])\n",
+    "jigsaw_df = pd.read_csv(\"hf://datasets/Arsive/toxicity_classification_jigsaw/\" + jigsaw_splits[\"validation\"])\n",
     "\n",
+    "jigsaw_df = jigsaw_df[(jigsaw_df[\"toxic\"] == 1) |\n",
+    "                            (jigsaw_df[\"severe_toxic\"] == 1) |\n",
+    "                            (jigsaw_df[\"obscene\"] == 1) |\n",
+    "                            (jigsaw_df[\"threat\"] == 1) |\n",
+    "                            (jigsaw_df[\"insult\"] == 1) |\n",
+    "                            (jigsaw_df[\"identity_hate\"] == 1)]\n",
+    "\n",
+    "jigsaw_df = jigsaw_df.rename(columns={\"comment_text\": \"messages\"})\n",
+    "jigsaw_df[\"label\"] = 0\n",
+    "jigsaw_df = jigsaw_df.dropna(subset=[\"messages\"])\n",
+    "jigsaw_df = jigsaw_df[[\"messages\", \"label\"]]\n",
+    "\n",
+    "# Load OLID dataset\n",
     "olid_splits = {'train': 'train.csv', 'test': 'test.csv'}\n",
     "olid_df = pd.read_csv(\"hf://datasets/christophsonntag/OLID/\" + olid_splits[\"train\"])\n",
     "\n",
-    "inference_df = inference_df[(inference_df[\"toxic\"] == 1) |\n",
-    "                            (inference_df[\"severe_toxic\"] == 1) |\n",
-    "                            (inference_df[\"obscene\"] == 1) |\n",
-    "                            (inference_df[\"threat\"] == 1) |\n",
-    "                            (inference_df[\"insult\"] == 1) |\n",
-    "                            (inference_df[\"identity_hate\"] == 1)]\n",
-    "\n",
-    "olid_df = olid_df.rename(columns={\"cleaned_tweet\": \"prompt\"})\n",
+    "olid_df = olid_df.rename(columns={\"cleaned_tweet\": \"messages\"})\n",
     "olid_df[\"label\"] = 0\n",
+    "olid_df = olid_df.dropna(subset=[\"messages\"])\n",
+    "olid_df = olid_df[[\"messages\", \"label\"]]\n",
     "\n",
-    "inference_df = inference_df.rename(columns={\"comment_text\": \"prompt\"})\n",
-    "inference_df[\"label\"] = 0\n",
+    "# Load hateXplain dataset\n",
+    "hateXplain = pd.read_parquet(\"hf://datasets/nirmalendu01/hateXplain_filtered/data/train-00000-of-00001.parquet\")\n",
+    "hateXplain = hateXplain.rename(columns={\"test_case\": \"messages\"})\n",
+    "hateXplain = hateXplain[(hateXplain[\"gold_label\"] == \"hateful\")]\n",
+    "hateXplain = hateXplain.rename(columns={\"gold_label\": \"label\"})\n",
+    "hateXplain = hateXplain[[\"messages\", \"label\"]]\n",
+    "hateXplain = hateXplain.dropna(subset=[\"messages\"])\n",
     "\n",
-    "inference_df = pd.concat([inference_df, olid_df], ignore_index=True)\n",
-    "inference_df = inference_df.sample(frac=1).reset_index(drop=True)"
+    "# Load TUKE slovak dataset\n",
+    "tuke_sk_splits = {'train': 'train.json', 'test': 'test.json'}\n",
+    "tuke_sk_df = pd.read_json(\"hf://datasets/TUKE-KEMT/hate_speech_slovak/\" + tuke_sk_splits[\"train\"])\n",
+    "tuke_sk_df = tuke_sk_df.rename(columns={\"text\": \"messages\"})\n",
+    "tuke_sk_df = tuke_sk_df[tuke_sk_df[\"label\"] == 0]\n",
+    "tuke_sk_df = tuke_sk_df[[\"messages\", \"label\"]]\n",
+    "tuke_sk_df = tuke_sk_df.dropna(subset=[\"messages\"])\n",
+    "\n",
+    "datasets = [jigsaw_df, olid_df, hateXplain, tuke_sk_df]"
    ]
   },
   {
@@ -415,9 +403,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inference_dataset = Dataset.from_pandas(inference_df)\n",
-    "inference_dataloader = DataLoader(\n",
-    "    inference_dataset, batch_size=BATCH_SIZE, shuffle=False)"
+    "# Create datasets and dataloaders for each hate speech dataset\n",
+    "inference_dataloaders = []\n",
+    "\n",
+    "for dataset_df in datasets:\n",
+    "    # Convert DataFrame to Dataset\n",
+    "    dataset = Dataset.from_pandas(dataset_df)\n",
+    "    \n",
+    "    # Create DataLoader\n",
+    "    dataloader = DataLoader(\n",
+    "        dataset, \n",
+    "        batch_size=BATCH_SIZE, \n",
+    "        shuffle=False\n",
+    "    )\n",
+    "    inference_dataloaders.append(dataloader)"
    ]
   },
   {
@@ -426,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_accuracy() -> float:\n",
+    "def evaluate_accuracy(inference_dataloader: DataLoader) -> float:\n",
     "    model.eval()  # Set model to evaluation mode\n",
     "\n",
     "    correct = 0\n",
@@ -456,40 +455,12 @@
     "    accuracy = 100 * correct / total\n",
     "    print(f\"Test Accuracy: {accuracy:.2f}%\")\n",
     "\n",
-    "    # Print per-class accuracy\n",
-    "    class_correct = [0, 0, 0]\n",
-    "    class_total = [0, 0, 0]\n",
-    "\n",
-    "    with torch.inference_mode():\n",
-    "        for batch in tqdm(test_dataloader, desc=\"Class accuracy\"):\n",
-    "            input_msg = batch[\"messages\"]\n",
-    "            input = tokenizer_func(input_msg).to(model.device)\n",
-    "            target = batch[\"label\"].to(model.device)\n",
-    "\n",
-    "            out = model.forward(**input)\n",
-    "            out = mean_pooling(out, input[\"attention_mask\"])\n",
-    "            out = F.normalize(out, p=2, dim=1)\n",
-    "            logits = model.head(out)\n",
-    "\n",
-    "            _, predicted = torch.max(logits, 1)\n",
-    "\n",
-    "            # Calculate per-class accuracy\n",
-    "            for i in range(target.size(0)):\n",
-    "                label = target[i].item()\n",
-    "                class_total[label] += 1\n",
-    "                if predicted[i] == target[i]:\n",
-    "                    class_correct[label] += 1\n",
-    "\n",
-    "    for i in range(3):\n",
-    "        class_name = combined_dataset[\"test\"].features[\"label\"].names[i]\n",
-    "        class_acc = 100 * class_correct[i] / class_total[i]\n",
-    "        print(f\"Accuracy of {class_name}: {class_acc:.2f}%\")\n",
-    "\n",
     "    return accuracy\n",
     "\n",
-    "\n",
-    "# Run the evaluation\n",
-    "accuracy = evaluate_accuracy()"
+    "for dataset in inference_dataloaders:\n",
+    "    # Evaluate on each dataset\n",
+    "    print(f\"Evaluating on dataset with {len(dataset.dataset)} samples\")\n",
+    "    accuracy = evaluate_accuracy(dataset)"
    ]
   },
   {
@@ -527,6 +498,15 @@
     "            all_predictions.extend(predicted.cpu().numpy())\n",
     "            all_targets.extend(target.cpu().numpy())\n",
     "\n",
+    "    # Calculate metrics\n",
+    "    accuracy = accuracy_score(all_targets, all_predictions)\n",
+    "    precision, recall, _, _ = precision_recall_fscore_support(all_targets, all_predictions, average=None)\n",
+    "    \n",
+    "    # Print metrics\n",
+    "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "\n",
     "    # Create confusion matrix\n",
     "    cm = confusion_matrix(all_targets, all_predictions)\n",
     "\n",
@@ -560,21 +540,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-validation",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
   }
  },
  "nbformat": 4,
